<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_nombrecompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/nombrecompleto">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_fechanacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/fechanacimiento">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:layout_marginTop="@dimen/form_margin_top">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin_top"
            android:hint="@string/email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:layout_marginTop="@dimen/form_margin_top">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"

                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.button.MaterialButton
            android:id="@+id/btn_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_label_siguiente"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/form_margin_top"
             />

    </LinearLayout>


</LinearLayout>